fixed overflowing main content for desktop view, mobile CSS needs to be rewritten

--- a/style.css
+++ b/style.css
@@ -1,20 +1,43 @@
-html, body {
-    height:100%;
+html {
+    height:100vh;
 }
 
-.main-wrapper {
-    height: calc(100vh - 56px);
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
+
+main {
+    flex: 1;
+}
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
 @media (min-width: 768px) {
     .sidebar {
-    overflow: auto;
-    height: calc(100% - 72px);
+        overflow: auto;
+        overflow-y: scroll;
+        height: calc(100%);
     }
 
     .business-img {
         width: 165px;
         height: auto;
+    }
+
+    .main-height {
+        height:calc(100vh - 56px);
+    }
+
+    .main-height-sidebar {
+        height:calc(100vh - 64px);
     }
 }
 
